add lang, button type and removed autofocus attribute

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, intial-scale-1" />
@@ -52,7 +52,6 @@
                   type="email"
                   name="email"
                   placeholder="email@example.com"
-                  autofocus="on"
                   pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"
                   required
                 />
@@ -80,7 +79,7 @@
                   <option value="other">other</option>
                 </select>
               </div>
-              <button type="Join">Join</button>
+              <button type="button">Join</button>
             </form>
           </div>
         </div>
